deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azkiflay-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: azkiflay-deployment
  template:
    metadata:
      labels:
        app: azkiflay-deployment
    spec:
      containers:
      - name: busybox
        image: busybox:1.37.0-glibc
        command:
          - sleep
          - "3600"
