cluster-service.yaml
---
apiVersion: v1 
kind: Service 
metadata: 
  name: azkiflay-cluster-service
spec: 
  type: ClusterIP 
  ports: 
    - protocol: TCP 
      port: 80 
      targetPort: 9376
  selector:
    app: azkiflay-cluster-service
