nginx-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: LoadBalancer   # creates an AWS ELB with a public IP/DNS
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80        # external port
      targetPort: 80  # container port
