nodeport-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: azkiflay-app-public
spec: 
  type: NodePort
  ports: 
    - protocol: TCP
      port: 80
  selector:
    app: azkiflay-app
