service.yaml
---
apiVersion: v1 
kind: Service 
metadata: 
  name: azkiflay-app
spec: 
  type: ClusterIP 
  ports: 
    - protocol: TCP 
      port: 80 
      targetPort: 9376
  selector: 
    app: azkiflay-app
